<resources>
    <string name="app_name">KeepFit</string>
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Don\'t have an account?<u>Sign Up</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">SignUp</string>
    <string name="log_in">Log in</string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="profile">Proile</string>
    <string name="already_have_an_account_log_in">Already have an account? <u>Log In</u></string>
    <string name="planfragment">PlanFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_fragment">track_fragment</string>
    <string name="profile_fragment">profile_fragment</string>
</resources>